Changed database engine to SQLite3

--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,3 @@
 {
-		"host"     : "localhost",
-		"user"     : "mebious",
-		"password" : "secret password!",
-		"database" : "mebious"
+		"database" : "mebious.db"
 }
